# atento

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr-validation.yml  release.yml
atento-cli/: Cargo.toml
atento-cli/src/: main.rs
atento-core/: Cargo.toml
atento-core/src/: bash.rs  data_type.rs  lib.rs  runner.rs  script.rs  step.rs  variable.rs  workflow.rs
atento-core/src/script/: bash.rs  mod.rs  runner.rs
atento-core/src/workflow/: mod.rs  runner.rs  step.rs  variable.rs  vartype.rs  workflow.rs
docs/: CNAME  index.html
workflows/: single.yaml
