[package]
name = "atento-core"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weareprogmatic/atento"
readme = "../README.md"
description = "Core engine for the Atento CLI tool"
homepage = "https://atento.dev"
documentation = "https://docs.rs/atento-core"
keywords = ["rust", "cli", "rmm", "automation"]
categories = ["command-line-utilities"]

[dependencies]
